Fix word spacing

--- a/index.css
+++ b/index.css
@@ -235,7 +235,7 @@ span.links {
 	font-weight: 500;	
 	float: left;
 	margin-left: 15%;
-	word-spacing: 20px;
+	word-spacing: 2px;
 }
 
 #footer {
